<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".MainActivity">


    <Button
            android:text="@string/btn_show_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/btnShowToast"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="70dp"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etUserMessage"
            android:layout_marginTop="165dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:hint="@string/etView"
    />
    <Button
            android:text="@string/btn_move_to_next_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSendData"
            android:layout_centerInParent="true"
            android:layout_marginTop="200dp"
    />
    <Button
            android:text="@string/btn_share_to_other_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnShareToOtherApps"
            android:layout_marginTop="400dp"
            android:layout_centerHorizontal="true"
            style="@style/Widget.AppCompat.Button"/>
    <Button
            android:text="@string/btn_recycler_view"
            android:layout_width="match_parent"
            android:layout_marginTop="450dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:id="@+id/btnRecyclerView"/>
</RelativeLayout>